[modify] 最高速度の制限を変更
ロボットがコケないような制限速度に変更

--- a/fourth_robot_control/config/controller.yaml
+++ b/fourth_robot_control/config/controller.yaml
@@ -32,14 +32,16 @@ fourth_robot:
     linear:
       x:
         has_velocity_limits    : true
-        max_velocity           : 1.1  # m/s
-        min_velocity           : -1.1 # m/s
+        max_velocity           : 0.55  # m/s
+        min_velocity           : -0.55 # m/s
         has_acceleration_limits: true
-        max_acceleration       : 0.8  # m/s^2
-        min_acceleration       : -0.4 # m/s^2
+        max_acceleration       : 0.25  # m/s^2
+        min_acceleration       : -0.25 # m/s^2
     angular:
       z:
         has_velocity_limits    : true
-        max_velocity           : 1.7  # rad/s
+        max_velocity           : 0.3  # rad/s
+        min_velocity           : -0.3
         has_acceleration_limits: true
-        max_acceleration       : 1.5  # rad/s^2
+        max_acceleration       : 0.3  # rad/s^2
+        min_acceleration       : -0.3
