--- a/fourth_robot_bringup/package.xml
+++ b/fourth_robot_bringup/package.xml
@@ -9,6 +9,12 @@
   <url type="repository">http://github.com/Nishida-Lab/TC2015</url>
   
   <author email="groadpg@gmail.com">Ryodo Tanaka</author>
- <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>joy_twist</run_depend>
+  <run_depend>gim30</run_depend>
+  <run_depend>rt_usb_9axisimu_driver</run_depend>
+  <run_depend>urg_node</run_depend>
+  <run_depend>ira_laser_tools</run_depend>
+  <run_depend>fourth_robot_driver</run_depend>
 
 </package>
