--- a/fourth_robot_bringup/CMakeLists.txt
+++ b/fourth_robot_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(fourth_robot_launcher)
+project(fourth_robot_bringup)
 find_package(catkin REQUIRED)
 
 catkin_package(
