--- a/fourth_robot_2dnav_gazebo/params/costmap.yaml
+++ b/fourth_robot_2dnav_gazebo/params/costmap.yaml
@@ -1,31 +1,21 @@
-obstacle_range: 9.5 #2.5
+obstacle_range: 2.5
 raytrace_range: 10.0
 footprint: [[0.35, 0.35], [0.35, -0.35], [-0.65, -0.35], [-0.65, 0.35]]
 #robot_radius: ir_of_robot
 inflation_radius: 1.0 #1.0
 cost_scaling_factor: 0.5 #10
-observation_sources: front_scan, rear_scan
-front_scan: {
-  sensor_frame: front_lrf_link
-  topic: /front/scan,
+observation_sources: base_scan
+base_scan: {
+  sensor_frame: lrf_link, 
+  topic: /base_scan,
   data_type: LaserScan, 
-  expected_update_rate: 0.025,
+  expected_update_rate: 1.0,
   observation_persistence: 0.0, 
   marking: true, 
   clearing: true, 
   max_obstacle_height: 1.0, 
   min_obstacle_height: -0.15
   }  
-rear_scan: {
-  sensor_frame: rear_lrf_link
-  topic: /rear/scan,
-  data_type: LaserScan, 
-  expected_update_rate: 0.025,
-  observation_persistence: 0.0, 
-  marking: true, 
-  clearing: true, 
-  max_obstacle_height: 1.0, 
-  min_obstacle_height: -0.15
-  }
+
 transform_tolerance: 1.5
   
