--- a/fourth_robot_2dnav/params/costmap/costmap_common.yaml
+++ b/fourth_robot_2dnav/params/costmap/costmap_common.yaml
@@ -15,7 +15,18 @@ base_scan: {
   clearing: true, 
   max_obstacle_height: 1.0, 
   min_obstacle_height: -0.15
-  }  
+  }
+gim30_scan: {
+  sensor_frame: gim30_link, 
+  topic: /point_cloud2,
+  data_type: PointCloud2, 
+  expected_update_rate: 1.0,
+  observation_persistence: 0.0, 
+  marking: true, 
+  clearing: true, 
+  max_obstacle_height: 1.0, 
+  min_obstacle_height: -0.15
+  }
 
 transform_tolerance: 1.5
   
