[fix] holonomic -> non holonomic

--- a/fourth_robot_bringup/config/joy/fourth_robot.yaml
+++ b/fourth_robot_bringup/config/joy/fourth_robot.yaml
@@ -4,4 +4,4 @@ linear_y_vel_turbo: 0  # Trubo velocity on Linear Y
 linear_y_vel_nomal: 0  # nomal velocity on Linear Y
 linear_z_vel_turbo: 2.0 # Trubo velocity on Angular Z (PI)
 linear_z_vel_nomal: 2.0 # nomal velocity on Angular Z (PI/3)
-holonomic: true          # enable holonomic robot or not
+holonomic: false         # enable holonomic robot or not
