[modify] add cirkit_waypoint_manager depend

--- a/fourth_robot_bringup/package.xml
+++ b/fourth_robot_bringup/package.xml
@@ -17,5 +17,6 @@
   <run_depend>ira_laser_tools</run_depend>
   <run_depend>ira_laser_tools</run_depend>
   <run_depend>fourth_robot_driver</run_depend>
+  <run_depend>cirkit_waypoint_manager</run_depend>
 
 </package>
