--- a/architect_description/package.xml
+++ b/architect_description/package.xml
@@ -4,11 +4,11 @@
   <version>2.0.0</version>
   <description>The architect_description package</description>
 
-  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
+  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</maintainer>
   <license>BSD</license>
   <url type="repository">http://github.com/CIR-KIT/architect_pkg</url>
   
-  <author email="groadpg@gmail.com">RyodoTanaka</author>
+  <author email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>robot_state_publisher</run_depend>
