--- a/architect_driver/package.xml
+++ b/architect_driver/package.xml
@@ -4,11 +4,11 @@
   <version>2.0.0</version>
   <description>The architect_driver package</description>
 
-  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
+  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</maintainer>
   <license>BSD</license>
   <url type="repository">http://github.com/Nishida-Lab/TC2015</url>
   
-  <author email="groadpg@gmail.com">Ryodo Tanaka</author>
+  <author email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
