--- a/architect_gazebo/package.xml
+++ b/architect_gazebo/package.xml
@@ -4,11 +4,11 @@
   <version>1.0.0</version>
   <description>The architect_gazebo package</description>
 
-  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</maintainer>
+  <maintainer email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</maintainer>
   <license>BSD</license>
   <url type="repository">http://github.com/CIR-KIT/architect_pkg</url>
   
-  <author email="virtualgimbal@xa2.so-net.ne.jp">RyodoTanaka</author>
+  <author email="virtualgimbal@xa2.so-net.ne.jp">Yoshiaki Sato</author>
 
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>ros_control</run_depend>
